feat:requisito 3 acrescentando 6 circulos a tela

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1 id="title">Titulo</h1>
     <h2 id="rgb-color">(168, 34, 1)</h2>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
     
 </body>
 </html>
