--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Titulo</h1>
-    <h2 id="rgb-color">(168, 34, 1)</h2>
+    <h1 id="title">título</h1>
+    <div id="rgb-color">(168, 34, 1)</div>
+    <!-- <div class="ball"></div>
     <div class="ball"></div>
     <div class="ball"></div>
     <div class="ball"></div>
     <div class="ball"></div>
-    <div class="ball"></div>
-    <div class="ball"></div>
-    
+    <div class="ball"></div> -->
+    <script src="script.js"></script>
 </body>
 </html>
